# asemver

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  semver.rst  usage.rst
src/semver/: __init__.py  cli.py  common.py  components.py  constants.py  exc.py  operations.py  version.py
tests/: test_build.py  test_bump.py  test_clean.py  test_cli_clean.py  test_cli_cmp.py  test_cli_print_csv.py  test_cli_print_json.py  test_cli_valid.py  test_getters.py  test_number.py  test_operations.py  test_operators.py  test_pre_rel.py  test_setters.py  test_valid.py  test_version.py
