[metadata]
name = asemver
version = attr: semver.__version__
author = Jonathan Liu
author_email = jonathanhliu21@gmail.com
description = A semantic versioner implemented in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonyboi396825/asemver
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Typing :: Typed

[bdist_wheel]
universal=1

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts = asemver = semver.cli:main

[tool:pytest]
minversion = 7.0
addopts = 
    --ignore=tests/private
    -vv
testpaths = 
    tests

[mypy]
files = src/semver
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
strict_equality = True
# warn_unreachable = True

[mypy-pyparsing.*]
ignore_missing_imports = True

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores = 
    src/semver/__init__.py:F401